read phytoplankton data update + worrms

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ CaRiaco/SCRIPPS/MODEL_DATA/MAREDAT/PANGAEA.777398_(PDI-1453-1455)_MACROZOOPLANKT
 CaRiaco/SCRIPPS/MODEL_DATA/Phytoplankton occurences/Phytoplankton_harmonized_database.csv
 *.grib
 *.idx
+CaRiaco/SCRIPPS/CARIACO_data/VeryNEWESTCariacoData/phytoplankton.mat
