collecting data for mnscrpt2

--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,7 @@ ENV/
 .Rproj.user
 *.nc
 
-
+*.DS_Store
 *.zip
 *.netcdf
 CaRiaco/SCRIPPS/MODEL_DATA/MAREDAT/PANGAEA.777398_(PDI-1453-1455)_MACROZOOPLANKTON/1MAC_COPEPOD_OBRIEN_MORIARTY.xls
