Get Satellite Date

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ CaRiaco/SCRIPPS/MODEL_DATA/Phytoplankton occurences/Phytoplankton_harmonized_dat
 CaRiaco/SCRIPPS/CARIACO_data/VeryNEWESTCariacoData/phytoplankton.mat
 CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/RAnalysisMNSCRPT2/.RData
 CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/RAnalysisMNSCRPT2/.Rhistory
+*.tar
