start working on wind data from CCMP

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ CaRiaco/SCRIPPS/CARIACO_data/VeryNEWESTCariacoData/phytoplankton.mat
 CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/RAnalysisMNSCRPT2/.RData
 CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/RAnalysisMNSCRPT2/.Rhistory
 *.tar
+CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/WindDATA/
